--- a/Worldprojections/worldprojections.html
+++ b/Worldprojections/worldprojections.html
@@ -66,7 +66,7 @@
     <a href=".//maps/53014.png">
     <img src=".//maps/53014.png" alt="WGS84" width='500px'></a>
     <h2>World Eckert 3 Projection</h2>
-<h3>The World Eckert 3 Projection represents a cylinder and the farther away from the center a coutry is, 
+<h3>The World Eckert 3 Projection represents a cylinder and the farther away from the center a country is, 
     the more stretched the map is there.
 </h3>
 <a href=".//maps/54013.png">
