--- a/tilemap.html
+++ b/tilemap.html
@@ -40,7 +40,7 @@ var ARPopup = "The American Market is known for its high quality products from t
 
 var SPPopup = "The Siman Pharmacy is the one of the biggest pharmacies in the city of San Pedro Sula, Honduras.<br/><img src='https://farmaciasiman.com/content/img/logo/LogoWeb_200.png'width='100px'/>";
 
-var AMPopup = "The Altara Mall is the most exclusive and luxurious mall in the city of San Pedro Sula.<br/><img src='https://scontent.fsap2-1.fna.fbcdn.net/v/t1.0-9/118708296_3574338259267229_3482606632786335968_o.jpg?_nc_cat=110&_nc_sid=e3f864&_nc_ohc=-5ZgQ3kT7XQAX9ojRGq&_nc_ht=scontent.fsap2-1.fna&oh=6ce69e32db65979177b92dbfcad7550d&oe=5F84D6B6'width='100px'/>";
+var AMPopup = "The Altara Mall is the most luxurious mall in the city of San Pedro Sula.<br/><img src='https://scontent.fsap2-1.fna.fbcdn.net/v/t1.0-9/118708296_3574338259267229_3482606632786335968_o.jpg?_nc_cat=110&_nc_sid=e3f864&_nc_ohc=-5ZgQ3kT7XQAX9ojRGq&_nc_ht=scontent.fsap2-1.fna&oh=6ce69e32db65979177b92dbfcad7550d&oe=5F84D6B6'width='100px'/>";
 
 var daMarker = L.marker([15.569162529681062, -88.01958916385937])
 .bindPopup(ARPopup)
