--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -11,7 +11,7 @@
 <h3></h3>
 <!-- Your map goes here -->
 <a href="yourmap.png">
-    <img src="./Oregon_Education_Levels_Map.png" alt="My Map" width='500px'>
+    <img src="source.png" alt="My Map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
