--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -6,19 +6,21 @@
     <title>Homework 7</title>
 </head>
 <body>
-<h1>Homework 7: Census data choropleth </h1>
+<h1>Homework 7: Census data choropleth of Florida:
+    This is a map that displays the concentration of individuals that the US Census identified in 2018 as ones that are in poverty status.    
+</h1>
 <h2>Alex Sorto</h2>
 <h3></h3>
 <!-- Your map goes here -->
-<a href="yourmap.png">
-    <img src="source.png" alt="My Map" width='500px'>
+<a href="./hw7png.png">
+    <img src="./hw7png.png" alt="My Map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
 <h2>Data used for this project</h2>
-    <a href="yourdata.csv"> CSV dataset </a>
+    <a href="./ACSST5Y2018.S1701_data_with_overlays_2020-09-18T233625 - Copy.csv"> CSV dataset </a>
     <p></p>
-    <a href="yourdata/shapefile"> Link to shapefile </a>
+    <a href="./fl_3086.gpkg"> Link to shapefile </a>
 
 </body>
 </html>
