--- a/hw7/hw7.html
+++ b/hw7/hw7.html
@@ -6,7 +6,7 @@
     <title>Homework 7</title>
 </head>
 <body>
-<h1>Homework 7: Census data chloropleth of Florida:
+<h1>Homework 7: Census data choropleth of Florida:
     This is a map that displays the concentration of individuals that the US Census identified in 2018 as ones that are in poverty status.    
 </h1>
 <h2>Alex Sorto</h2>
