--- a/hw8/hw8.html
+++ b/hw8/hw8.html
@@ -10,22 +10,27 @@
     This homework shows maps that display the concentration of individuals that the US Census identified in 2018 as ones that are in poverty status, with different modes and ratios.    
 </h1>
 <h2>Alex Sorto</h2>
-<h3>This map displays Florida using natural breaks. We can see the concentration of individuals changes greatly throughout the map.</h3>
+<h3>This map displays Florida using natural breaks. We can see the concentration of individuals changes greatly throughout the map, due to most of the numbers concentrated in the last segments shown in the legend.
+    
+</h3>
 <!-- Your map goes here -->
 <a href="./florida_nb.png">
     <img src="./florida_nb.png" alt="My Map" width='500px'>
     </a>
 
-    <h3>This map displays Florida using natural breaks. We can see the concentration of individuals changes greatly throughout the map.</h3>
+    <h3>With equal intervals, we can see the intervals groups most of the population in the white areas.
+        Thus, since the numbers that show the biggest quantities are in the bottom of the legend, and these counties that satisfy this requirment are few,
+         those show a darker color.
+    </h3>
 <!-- Your map goes here -->
-<a href="./florida_nb.png">
-    <img src="./florida_nb.png" alt="My Map" width='500px'>
+<a href="./floridaei.png">
+    <img src="./floridaei.png" alt="My Map" width='500px'>
     </a>
 
-    <h3>This map displays Florida using natural breaks. We can see the concentration of individuals changes greatly throughout the map.</h3>
+    <h3>With pretty breaks, we can see similar results as with equal intervals. While the numbers are rounded, they represent similar segments as the map with equal intervals.  </h3>
 <!-- Your map goes here -->
-<a href="./florida_nb.png">
-    <img src="./florida_nb.png" alt="My Map" width='500px'>
+<a href="./floridapb.png">
+    <img src="./floridapb.png" alt="My Map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
