update hw9 final

--- a/hw9/hw9.html
+++ b/hw9/hw9.html
@@ -14,8 +14,8 @@
 <h2>Alex Sorto</h2>
 <h3></h3>
 <!-- Your map goes here -->
-<a href="./hw9.png">
-    <img src="./hw9.png" alt="My Map" width='500px'>
+<a href="./hw9final2.png">
+    <img src="./hw9final2.png" alt="My Map" width='500px'>
     </a>
 
 <!-- Link to your shapefile in Github and you CSV -->
