--- a/hw10/hw10.html
+++ b/hw10/hw10.html
@@ -30,6 +30,9 @@
     <a href="https://data.humdata.org/showcase/inform-honduras"> CSV datasets from the Humanitarian Data Exchange</a>
     <p></p>
     <a href="https://territoriosenriesgo.unah.edu.hn/"> Link to Layers from the National Autonomous University GeoPortal </a>
+    <p></p> 
+    <a href="https://www.mapsofworld.com/honduras/honduras-location-map.html"> Link to Map Locator for Honduras</a>
+    
 
 </body>
 </html>
